# comment_scraper

./: .gitignore  README.md  base_scraper.py  classes.py  main.py  pyproject.toml  result.json  structure.json
classes/: __init__.py  scraper.py  structure.py
