[project]
name = "comment_scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "KhemIngkapat", email = "60930364+KhemIngkapat@users.noreply.github.com"},
]
dependencies = [
    "selenium>=4.7.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "None"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
main = "python main.py"

[too.pyright]
extraPaths = ["__pypackages__/3.11/lib"]
